# conan-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: ci.yaml
src/: compression.cpp  compression.h  main.cpp
test_package/: conanfile.py
tests/: CMakeLists.txt  test_compression.cpp
